--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <ul class="mainmenu hidebutton">
                                 <li class="active hidebutton"><a href="index.html">Home</a></li>
                                 <li><a href="#" >Categories</a></li>
-                                <li><a href="#" >Jobs</a></li>
+                                <li><a href="./jobspath.html" >Jobs</a></li>
                                 <li><a href="#" >Blogs</a></li>
                                 <li><a href="#" >Sign in</a></li>
                                 <!-- <li class="toggler" onclick="showSidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> -->
@@ -79,7 +79,7 @@
                                 <li class="cross" onclick="hidesidebar()"><a href="#"> <i class="fa-solid fa-circle-xmark"></i></a></li>
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li><a href="#">Categories</a></li>
-                                <li><a href="#">Jobs</a></li>
+                                <li><a href="./jobspath.html">Jobs</a></li>
                                 <li><a href="#">Blogs</a></li>
                                 <li ><a href="#">Sign in</a></li>
                             </ul>
