--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <div class="navlist">
                             <ul class="mainmenu hidebutton">
                                 <li class="active hidebutton"><a href="index.html">Home</a></li>
-                                <li><a href="#" >Categories</a></li>
-                                <li><a href="./jobspath.html" >Jobs</a></li>
+                                <li><a href="./jobspath.html" >Categories</a></li>
+                                <li><a href="#" >Jobs</a></li>
                                 <li><a href="#" >Blogs</a></li>
                                 <li><a href="#" >Sign in</a></li>
                                 <!-- <li class="toggler" onclick="showSidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> -->
@@ -78,8 +78,8 @@
                             <ul class="slidebar">
                                 <li class="cross" onclick="hidesidebar()"><a href="#"> <i class="fa-solid fa-circle-xmark"></i></a></li>
                                 <li class="active"><a href="index.html">Home</a></li>
-                                <li><a href="#">Categories</a></li>
-                                <li><a href="./jobspath.html">Jobs</a></li>
+                                <li><a href="./jobspath.html">Categories</a></li>
+                                <li><a href="#">Jobs</a></li>
                                 <li><a href="#">Blogs</a></li>
                                 <li ><a href="#">Sign in</a></li>
                             </ul>
@@ -210,87 +210,88 @@
                 <div class="path-main">
 
 
-                    <div class="card card1">
+                    <div class="card card1" data-aos="fade-right" data-aos-duration="3000">
                         <figure>
-                            <img src="./images/path1.2.png" alt="pathpic">
+                           <a href="#"><img src="./images/path1.2.png" alt="pathpic"></a> 
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
+                           <a href="#">Customer Support Car</a>
                             <p>52 Jobs Available</p>
                         </div>
                     </div>
 
 
-                    <div class="card card1">
+                    <div class="card card2" data-aos="flip-up" data-aos-duration="3000">
                         <figure>
-                            <img src="./images/path2.2.png" alt="pathpic">
+                          <a href="#"><img src="./images/path2.2.png" alt="pathpic"></a>  
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
-                            <p>52 Jobs Available</p>
+                            <a href="#">Design & Development</a>
+                            <p>12 Jobs Available</p>
                         </div>
                     </div>
 
 
-                    <div class="card card1">
+                    <div class="card card3" data-aos="flip-up" data-aos-duration="2000">
                         <figure>
-                            <img src="./images/path3.2.png" alt="pathpic">
+                            <a href="#"> <img src="./images/path3.2.png" alt="pathpic"></a>
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
-                            <p>52 Jobs Available</p>
+                            <a href="#"> Marketing & Managment</a>
+                            <p>26 Jobs Available</p>
                         </div>
                     </div>
 
-                    <div class="card card1">
+                    <div class="card card4" data-aos="fade-left" data-aos-duration="3000">
                         <figure>
-                            <img src="./images/path4.1.png" alt="pathpic">
+                            <a href="#"> <img src="./images/path4.1.png" alt="pathpic"></a>
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
-                            <p>52 Jobs Available</p>
+                            <a href="#">Human Resource</a>
+                            <p>12 Jobs Available</p>
                         </div>
                     </div>
 
-                    <div class="card card1">
+                    <div class="card card5" data-aos="fade-right" data-aos-duration="3000">
                         <figure>
-                            <img src="./images/path5.1.png" alt="pathpic">
+                            <a href="#"><img src="./images/path5.1.png" alt="pathpic"></a>
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
-                            <p>52 Jobs Available</p>
+                            <a href="#"> Project Managment</a>
+                            <p>26 Jobs Available</p>
                         </div>
                     </div>
 
-                    <div class="card card1">
+                    <div class="card card6" data-aos="flip-up" data-aos-duration="3000">
                         <figure>
-                            <img src="./images/path6.1.png" alt="pathpic">
+                            <a href="#"> <img src="./images/path6.1.png" alt="pathpic"></a>
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
-                            <p>52 Jobs Available</p>
+                            <a href="#">Data Analysis</a>
+                            <p>54 Jobs Available</p>
                         </div>
                     </div>
 
-                    <div class="card card1">
+                    <div class="card card7" data-aos="flip-up" data-aos-duration="3000">
                         <figure>
-                            <img src="./images/path7.1.png" alt="pathpic">
+                            <a href="#"> <img src="./images/path7.1.png" alt="pathpic"></a>
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
-                            <p>52 Jobs Available</p>
+                            <a href="#">Cyber Security</a>
+                            <p>22 Jobs Available</p>
                         </div>
                     </div>
 
-                    <div class="card card1">
+                    <div class="card card8" data-aos="fade-left" data-aos-duration="3000">
                         <figure>
-                            <img src="./images/path8.1.png" alt="pathpic">
+                            <a href="#"> <img src="./images/path8.1.png" alt="pathpic"></a>
                         </figure>
                         <div class="txt">
-                            <p>Customer Support Car</p>
-                            <p>52 Jobs Available</p>
+                            <a href="#">Consulting Service</a>
+                             <p>22 Jobs Available</p>
                         </div>
                     </div>
+
 
                 </div>
             </div>
