--- a/jobspath.html
+++ b/jobspath.html
@@ -33,8 +33,8 @@
                         <div class="navlist">
                             <ul class="mainmenu hidebutton">
                                 <li class="hidebutton"><a href="./index.html">Home</a></li>
-                                <li><a href="#">Categories</a></li>
-                                <li><a class="active" href="./jobspath.html">Jobs</a></li>
+                                <li><a class="active"href="./jobspath.html">Categories</a></li>
+                                <li><a href="#">Jobs</a></li>
                                 <li><a href="#">Blogs</a></li>
 
                                 <!-- <li class="toggler" onclick="showSidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> -->
@@ -43,9 +43,9 @@
                             <ul class="slidebar">
                                 <li class="cross" onclick="hidesidebar()"><a href="#"> <i
                                             class="fa-solid fa-circle-xmark"></i></a></li>
-                                <li class="active"><a href="index.html">Home</a></li>
-                                <li><a href="#">Categories</a></li>
-                                <li><a href="./jobspath.html">Jobs</a></li>
+                                <li ><a href="index.html">Home</a></li>
+                                <li><a class="active" href="./jobspath.html">Categories</a></li>
+                                <li><a href="#">Jobs</a></li>
                                 <li><a href="#">Blogs</a></li>
                                 <li><a href="#">Sign in</a></li>
                             </ul>
@@ -109,7 +109,7 @@
                                <a href="#"><img src="./images/path1.2.png" alt="pathpic"></a> 
                             </figure>
                             <div class="txt">
-                               <a href="#"><p>Customer Support Car</p></a>
+                               <a href="#">Customer Support Car</a>
                                 <p>52 Jobs Available</p>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                               <a href="#"><img src="./images/path2.2.png" alt="pathpic"></a>  
                             </figure>
                             <div class="txt">
-                                <a href="#"><p>Design & Development</p></a>
+                                <a href="#">Design & Development</a>
                                 <p>12 Jobs Available</p>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                                 <a href="#"> <img src="./images/path3.2.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Marketing & Managment</p></a>
+                                <a href="#">Marketing & Managment</a>
                                 <p>26 Jobs Available</p>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                                 <a href="#"> <img src="./images/path4.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Human Resource</p></a>
+                                <a href="#">Human Resource</a>
                                 <p>12 Jobs Available</p>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                                 <a href="#"><img src="./images/path5.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Project Managment</p></a>
+                                <a href="#">Project Managment</a>
                                 <p>26 Jobs Available</p>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                                 <a href="#"> <img src="./images/path6.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Data Analysis</p></a>
+                                <a href="#">Data Analysis</a>
                                 <p>54 Jobs Available</p>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                                 <a href="#"> <img src="./images/path7.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Cyber Security</p></a>
+                                <a href="#">Cyber Security</a>
                                 <p>22 Jobs Available</p>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
                                 <a href="#"> <img src="./images/path8.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Consulting Service</p></a>
+                                <a href="#">Consulting Service</a>
                                  <p>22 Jobs Available</p>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                                 <a href="#">  <img src="./images/path5.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Graphics Design</p></a>
+                                <a href="#">Graphics Design</a>
                                 <p>26 Jobs Available</p>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                 <a href="#"> <img src="./images/path6.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Web Design</p></a>
+                                <a href="#">Web Design</a>
                                 <p>54 Jobs Available</p>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                                 <a href="#"> <img src="./images/path7.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>A-Inteligence</p></a>
+                                <a href="#">A-Inteligence</a>
                                 <p>22 Jobs Available</p>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                                 <a href="#"> <img src="./images/path8.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#">  <p>Video Editing</p></a>
+                                <a href="#">Video Editing</a>
                                 <p>22 Jobs Available</p>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                                 <a href="#"> <img src="./images/path5.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Finance & Banking</p></a>
+                                <a href="#">Finance & Banking</a>
                                 <p>26 Jobs Available</p>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                                 <a href="#"> <img src="./images/path6.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Automation</p></a>
+                                <a href="#">Automation</a>
                                 <p>54 Jobs Available</p>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                                 <a href="#"> <img src="./images/path7.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#"> <p>Animation & VFX</p></a>
+                                <a href="#">Animation & VFX</a>
                                 <p>22 Jobs Available</p>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
                                 <a href="#"> <img src="./images/path8.1.png" alt="pathpic"></a>
                             </figure>
                             <div class="txt">
-                                <a href="#">  <p>Consulting Service</p></a>
+                                <a href="#">Consulting Service</a>
                                 <p>22 Jobs Available</p>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                     </div>
                     <div class="rightpart">
                         <input type="text" name="name" id="name" placeholder="login for Newsletter">
-                        <i class="fa-solid fa-paper-plane" data-aos="fade-down-left"data-aos-duration="2000"></i>
+                        <i class="fa-solid fa-paper-plane" ></i>
                     </div>
 
                 </div>
