--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJobs</title>
 
+    <!-- fabiconlink -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./fabicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./fabicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./fabicon/favicon-16x16.png">
+    <link rel="manifest" href="./fabicon/site.webmanifest">
+
+   
+
+
+    <!-- fabicon link -->
+
     <!-- --------------------AoS---------- -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- ------------------------------------------------Font Awsome Cdn-------------------------------------------- -->
@@ -69,7 +80,7 @@
                             <ul class="mainmenu hidebutton">
                                 <li class="active hidebutton"><a href="index.html">Home</a></li>
                                 <li><a href="./jobspath.html" >Categories</a></li>
-                                <li><a href="#" >Jobs</a></li>
+                                <li><a href="./joblisting.html" >Jobs</a></li>
                                 <li><a href="#" >Blogs</a></li>
                                 <li><a href="#" >Sign in</a></li>
                                 <!-- <li class="toggler" onclick="showSidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> -->
@@ -79,7 +90,7 @@
                                 <li class="cross" onclick="hidesidebar()"><a href="#"> <i class="fa-solid fa-circle-xmark"></i></a></li>
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li><a href="./jobspath.html">Categories</a></li>
-                                <li><a href="#">Jobs</a></li>
+                                <li><a href="./joblisting.html">Jobs</a></li>
                                 <li><a href="#">Blogs</a></li>
                                 <li ><a href="#">Sign in</a></li>
                             </ul>
@@ -294,6 +305,152 @@
 
 
                 </div>
+            </div>
+        </section>
+
+<!-- jobs-of day -->
+
+        <section class="jobs-off-day common-padding">
+            <div class="container">
+                <div class="row">
+                <div class="heading">
+                    <h3>Jobs Of the Day</h3>
+                </div>
+
+                <div class="jobcard_main">
+
+                    <div class="jobcard jobcard1">
+                        <div class="top_heading">
+                            <p>Rudolph Technology Pvt Ltd</p>
+                        </div>
+                        <div class="bottom-txt">
+                            <p>Mern Stack</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
+
+                            <div class="jd">
+                                <p>Exp - 6 yrs</p>
+                                <p>Full time</p>
+                                <p>Salary - 52000/mo</p>
+                            </div>
+                            <div class="apply">
+                                <a class="button_apply02" href="#">Apply</a>
+                                <p>20 days left to apply</p>
+                            </div>
+                        </div>   
+                    </div>
+
+                    <div class="jobcard jobcard2">
+                        <div class="top_heading">
+                            <p>Rudolph Technology Pvt Ltd</p>
+                        </div>
+                        <div class="bottom-txt">
+                            <p>Mern Stack</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
+
+                            <div class="jd">
+                                <p>Exp - 6 yrs</p>
+                                <p>Full time</p>
+                                <p>Salary - 52000/mo</p>
+                            </div>
+                            <div class="apply">
+                                <a class="button_apply02" href="#">Apply</a>
+                                <p>20 days left to apply</p>
+                            </div>
+                        </div>   
+                    </div>
+
+                    <div class="jobcard jobcard3">
+                        <div class="top_heading">
+                            <p>Rudolph Technology Pvt Ltd</p>
+                        </div>
+                        <div class="bottom-txt">
+                            <p>Mern Stack</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
+
+                            <div class="jd">
+                                <p>Exp - 6 yrs</p>
+                                <p>Full time</p>
+                                <p>Salary - 52000/mo</p>
+                            </div>
+                            <div class="apply">
+                                <a class="button_apply02" href="#">Apply</a>
+                                <p>20 days left to apply</p>
+                            </div>
+                        </div>   
+                    </div>
+
+                    <div class="jobcard jobcard4">
+                        <div class="top_heading">
+                            <p>Rudolph Technology Pvt Ltd</p>
+                        </div>
+                        <div class="bottom-txt">
+                            <p>Mern Stack</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
+
+                            <div class="jd">
+                                <p>Exp - 6 yrs</p>
+                                <p>Full time</p>
+                                <p>Salary - 52000/mo</p>
+                            </div>
+                            <div class="apply">
+                                <a class="button_apply02" href="#">Apply</a>
+                                <p>20 days left to apply</p>
+                            </div>
+                        </div>   
+                    </div>
+
+                    <div class="jobcard jobcard5">
+                        <div class="top_heading">
+                            <p>Rudolph Technology Pvt Ltd</p>
+                        </div>
+                        <div class="bottom-txt">
+                            <p>Mern Stack</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
+
+                            <div class="jd">
+                                <p>Exp - 6 yrs</p>
+                                <p>Full time</p>
+                                <p>Salary - 52000/mo</p>
+                            </div>
+                            <div class="apply">
+                                <a class="button_apply02" href="#">Apply</a>
+                                <p>20 days left to apply</p>
+                            </div>
+                        </div>   
+                    </div>
+
+                    <div class="jobcard jobcard6">
+                        <div class="top_heading">
+                            <p>Rudolph Technology Pvt Ltd</p>
+                        </div>
+                        <div class="bottom-txt">
+                            <p>Mern Stack</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
+
+                            <div class="jd">
+                                <p>Exp - 6 yrs</p>
+                                <p>Full time</p>
+                                <p>Salary - 52000/mo</p>
+                            </div>
+                            <div class="apply">
+                                <a class="button_apply02" href="#">Apply</a>
+                                <p>20 days left to apply</p>
+                            </div>
+                        </div>   
+                    </div>
+
+
+
+
+                    
+                </div>
+                <div class="btn">
+                    <a class="button_view_all" href="./joblisting.html">View All</a>
+
+                </div>
+
+                
+            </div>
             </div>
         </section>
     </main>
