--- a/jobspath.html
+++ b/jobspath.html
@@ -5,7 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JobsPath</title>
+    <!-- fabiconlink -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./fabicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./fabicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./fabicon/favicon-16x16.png">
+    <link rel="manifest" href="./fabicon/site.webmanifest">
+
+   
+
+
+    <!-- fabicon link -->
+    <!-- Aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- font awsome -->
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <!-- Css-link -->
     <link rel="stylesheet" href="./css/jobspath.css">
@@ -34,7 +46,7 @@
                             <ul class="mainmenu hidebutton">
                                 <li class="hidebutton"><a href="./index.html">Home</a></li>
                                 <li><a class="active"href="./jobspath.html">Categories</a></li>
-                                <li><a href="#">Jobs</a></li>
+                                <li><a href="./joblisting.html">Jobs</a></li>
                                 <li><a href="#">Blogs</a></li>
 
                                 <!-- <li class="toggler" onclick="showSidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> -->
@@ -45,7 +57,7 @@
                                             class="fa-solid fa-circle-xmark"></i></a></li>
                                 <li ><a href="index.html">Home</a></li>
                                 <li><a class="active" href="./jobspath.html">Categories</a></li>
-                                <li><a href="#">Jobs</a></li>
+                                <li><a href="./joblisting.html">Jobs</a></li>
                                 <li><a href="#">Blogs</a></li>
                                 <li><a href="#">Sign in</a></li>
                             </ul>
@@ -304,8 +316,8 @@
 
                     <div class="middle_part">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Categories</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./jobspath.html">Categories</a></li>
                             <li><a href="#">Jobs</a></li>
                             <li><a href="#">Blog</a></li>
                         </ul>
@@ -337,7 +349,9 @@
 
         </div>
 
-
+        <div class="lower-footer">
+            <p>Copyright 2022 AdJob. All rights reserved.</p>
+        </div>
 
     </footer>
 
