--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
 
                 <div class="jobcard_main">
 
+                   
                     <div class="jobcard jobcard1">
                         <div class="top_heading">
                             <p>Rudolph Technology Pvt Ltd</p>
@@ -333,7 +334,7 @@
                                 <p>Salary - 52000/mo</p>
                             </div>
                             <div class="apply">
-                                <a class="button_apply02" href="#">Apply</a>
+                                <a class="button_apply02" href="./apply.html">Apply</a>
                                 <p>20 days left to apply</p>
                             </div>
                         </div>   
@@ -344,37 +345,37 @@
                             <p>Rudolph Technology Pvt Ltd</p>
                         </div>
                         <div class="bottom-txt">
-                            <p>Mern Stack</p>
+                            <p>Web Development</p>
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
 
                             <div class="jd">
-                                <p>Exp - 6 yrs</p>
+                                <p>Exp - 3 yrs</p>
                                 <p>Full time</p>
-                                <p>Salary - 52000/mo</p>
+                                <p>Salary - 22000/mo</p>
                             </div>
                             <div class="apply">
                                 <a class="button_apply02" href="#">Apply</a>
-                                <p>20 days left to apply</p>
+                                <p>12 days left to apply</p>
                             </div>
                         </div>   
                     </div>
 
                     <div class="jobcard jobcard3">
                         <div class="top_heading">
-                            <p>Rudolph Technology Pvt Ltd</p>
+                            <p>Ui/Ux Designer</p>
                         </div>
                         <div class="bottom-txt">
                             <p>Mern Stack</p>
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
 
                             <div class="jd">
-                                <p>Exp - 6 yrs</p>
+                                <p>Exp - 2 yrs</p>
                                 <p>Full time</p>
-                                <p>Salary - 52000/mo</p>
+                                <p>Salary - 15000/mo</p>
                             </div>
                             <div class="apply">
                                 <a class="button_apply02" href="#">Apply</a>
-                                <p>20 days left to apply</p>
+                                <p>12 days left to apply</p>
                             </div>
                         </div>   
                     </div>
@@ -384,13 +385,13 @@
                             <p>Rudolph Technology Pvt Ltd</p>
                         </div>
                         <div class="bottom-txt">
-                            <p>Mern Stack</p>
+                            <p>Frontend Developers</p>
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
 
                             <div class="jd">
-                                <p>Exp - 6 yrs</p>
+                                <p>Exp - 1.5 yrs</p>
                                 <p>Full time</p>
-                                <p>Salary - 52000/mo</p>
+                                <p>Salary - 20000/mo</p>
                             </div>
                             <div class="apply">
                                 <a class="button_apply02" href="#">Apply</a>
@@ -404,20 +405,21 @@
                             <p>Rudolph Technology Pvt Ltd</p>
                         </div>
                         <div class="bottom-txt">
-                            <p>Mern Stack</p>
+                            <p>Digital Marketing</p>
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
 
                             <div class="jd">
-                                <p>Exp - 6 yrs</p>
+                                <p>Exp - 3 yrs</p>
                                 <p>Full time</p>
-                                <p>Salary - 52000/mo</p>
+                                <p>Salary - 22000/mo</p>
                             </div>
                             <div class="apply">
                                 <a class="button_apply02" href="#">Apply</a>
-                                <p>20 days left to apply</p>
+                                <p>12 days left to apply</p>
                             </div>
                         </div>   
                     </div>
+
 
                     <div class="jobcard jobcard6">
                         <div class="top_heading">
@@ -428,17 +430,16 @@
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </p>
 
                             <div class="jd">
-                                <p>Exp - 6 yrs</p>
+                                <p>Exp - 2 yrs</p>
                                 <p>Full time</p>
-                                <p>Salary - 52000/mo</p>
+                                <p>Salary - 15000/mo</p>
                             </div>
                             <div class="apply">
                                 <a class="button_apply02" href="#">Apply</a>
-                                <p>20 days left to apply</p>
+                                <p>12 days left to apply</p>
                             </div>
                         </div>   
                     </div>
-
 
 
 
