--- a/jobspath.html
+++ b/jobspath.html
@@ -303,7 +303,7 @@
                 <div class="upper_footer">
                     <div class="left_part">
                         <figure>
-                           <a href="./jobspath.html"><img src="./images/footerlogo.png" alt="logo"></a> 
+                           <a href="./index.html"><img src="./images/footerlogo.png" alt="logo"></a> 
 
                         </figure>
                         <div class="icon">
@@ -350,7 +350,7 @@
         </div>
 
         <div class="lower-footer">
-            <p>Copyright 2022 AdJob. All rights reserved.</p>
+            <p>&copy;Copyright 2024 A Job. All rights reserved.</p>
         </div>
 
     </footer>
