--- a/apply.html
+++ b/apply.html
@@ -48,7 +48,7 @@
                                 <li class="hidebutton"><a href="./index.html">Home</a></li>
                                 <li><a href="./jobspath.html">Categories</a></li>
                                 <li><a class="active" href="./joblisting.html">Jobs</a></li>
-                                <li><a href="#">Blogs</a></li>
+                                <li><a href="./index.html#blog">Blogs</a></li>
 
                                 <!-- <li class="toggler" onclick="showSidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> -->
                             </ul>
@@ -59,8 +59,8 @@
                                 <li ><a href="index.html">Home</a></li>
                                 <li><a href="./jobspath.html">Categories</a></li>
                                 <li><a class="active"  href="./joblisting.html">Jobs</a></li>
-                                <li><a href="#">Blogs</a></li>
-                                <li><a href="#">Sign in</a></li>
+                                <li><a href="./index.html#blog">Blogs</a></li>
+                               
                             </ul>
 
 
@@ -241,7 +241,7 @@
                      
 
             <div class="btn">
-                        <a href="#" class="button_apply03">View More</a>
+                        <a href="./joblisting.html" class="button_apply03">View More</a>
 
             </div>
 
@@ -298,7 +298,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./jobspath.html">Categories</a></li>
                                 <li><a href="./joblisting.html">Jobs</a></li>
-                                <li><a href="#">Blog</a></li>
+                                <li><a href="./index.html#blog">Blog</a></li>
                             </ul>
                                 <div class="call">
                                     <i class="fa-solid fa-phone"></i>
