--- a/jobspath.html
+++ b/jobspath.html
@@ -47,7 +47,7 @@
                                 <li class="hidebutton"><a href="./index.html">Home</a></li>
                                 <li><a class="active"href="./jobspath.html">Categories</a></li>
                                 <li><a href="./joblisting.html">Jobs</a></li>
-                                <li><a href="#">Blogs</a></li>
+                                <li><a href="./index.html#blog">Blogs</a></li>
 
                                 <!-- <li class="toggler" onclick="showSidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> -->
                             </ul>
@@ -58,8 +58,8 @@
                                 <li ><a href="index.html">Home</a></li>
                                 <li><a class="active" href="./jobspath.html">Categories</a></li>
                                 <li><a href="./joblisting.html">Jobs</a></li>
-                                <li><a href="#">Blogs</a></li>
-                                <li><a href="#">Sign in</a></li>
+                                <li><a href="./index.html#blog">Blogs</a></li>
+                               
                             </ul>
 
 
@@ -318,8 +318,8 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./jobspath.html">Categories</a></li>
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Blog</a></li>
+                            <li><a href="./joblisting.html">Jobs</a></li>
+                            <li><a href="./index.html#blog">Blog</a></li>
                         </ul>
                        
 
