--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <img src="./images/Group 117 (1).png" alt="img">
                 </figure>
             <div class="form">  
-                <h3>Sig in</h3>
+                <h3>Sign in</h3>
                <form onsubmit="return data()" action="#">
                 <input type="text" id="fname" name="name" placeholder="Name">
                 <p id="error1" class="error"></p>
