--- a/apply.html
+++ b/apply.html
@@ -318,7 +318,7 @@
                 </div>
             </div>
             <div class="lower-footer">
-                <p>&copy;Copyright 2024 A Job. All rights reserved.</p>
+                <p>&copy;Copyright 2024 <a href="#"> A Job.</a> All rights reserved.</p>
             </div>
     
     
